dev/tests/cases/neg/15_membership_mismatch.tv
df main() -> void {
    set names: list<str> = list_new();
    push(names, "a");
    check 5 <| names { echo!("x"); }
}
